--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -3,7 +3,7 @@ title: 'Hello, World'
 creator: Umang Shrestha
 keywords: ['first blog', 'hello world', 'speak easy']
 description: 'This is the first blog in Speak Easy'
-date: "Sep 12, 2024"
+date: 'Sep 12, 2024'
 ---
 
 This is the first blog.
