--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -3,5 +3,9 @@
     "title": "स्पीक ईसी",
     "description": "{{title}} एक भाषा सीखने का मंच है जो आपको खेलने वाले अनुभवों के साथ नई भाषा सीखने में मदद करता है।"
   },
+  "404": {
+    "title": "पेज नहीं मिला",
+    "description": "आप जिस पेज की तलाश कर रहे हैं वह नहीं मिल सका।"
+  },
   "HELLO": "नमस्ते"
 }
