--- a/public/locales/np/common.json
+++ b/public/locales/np/common.json
@@ -3,5 +3,9 @@
     "title": "स्पीक ईसी",
     "description": "{{title}} एलुटा भाषा सिक्ने ठाउँ हो जुन तपाईंलाई खेलको अनुभवहरूसँग नयाँ भाषा सिक्नमा मद्दत गर्दछ।"
   },
+  "404": {
+    "title": "पेज फेला परेन",
+    "description": "तपाईंले खोज्दै गरिरहेको पेज फेला परेन।"
+  },
   "HELLO": "नमस्ते"
 }
