--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,5 +3,9 @@
     "title": "Speak Easy",
     "description": "{{title}} is a language learning platform that helps you learn a new language with gamified experiences."
   },
+  "404": {
+    "title": "Page Not Found",
+    "description": "The page you are looking for could not be found."
+  },
   "HELLO": "Hello"
 }
