--- a/public/locales/ml/common.json
+++ b/public/locales/ml/common.json
@@ -3,5 +3,9 @@
     "title": "സ്പീക് ഈസി",
     "description": "{{title}} ഒരു ഭാഷാ പഠന പлат്ഫോം ആണ്, അത് ഗെയിമുകളുടെ അനുഭവങ്ങളുമായി ഒരു പുതിയ ഭാഷ പഠിപ്പിക്കുന്നു."
   },
+  "404": {
+    "title": "പേജ് ലഭ്യമല്ല",
+    "description": "നിങ്ങൾ തിരയുന്ന പേജ് ലഭ്യമല്ല."
+  },
   "HELLO": "ഹലോ"
 }
